// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TimePicker should be rendered correctly 1`] = `
<div
  className="container uui-input-box -clickable root size-36 mode-form dateInput"
  onBlur={[Function]}
  onClick={null}
  onFocus={[Function]}
  tabIndex={-1}
>
  <input
    className="uui-input"
    onChange={[Function]}
    onKeyDown={[Function]}
    placeholder="hh:mm A"
    type="text"
    value=""
  />
  <div
    className="container uui-icon uui-enabled -clickable uui-icon-cancel -clickable"
    onClick={[Function]}
    style={Object {}}
  >
    <svg
      className=""
      height={24}
      viewBox="0 0 12 24"
      width={12}
    >
      <use
        xlinkHref="#btn-cross-18.svg"
      />
    </svg>
  </div>
</div>
`;

exports[`TimePicker should be rendered correctly 2`] = `
<div
  className="container uui-input-box uui-disabled root size-36 mode-form dateInput"
  onBlur={[Function]}
  onClick={null}
  onFocus={[Function]}
  tabIndex={-1}
>
  <input
    aria-disabled={true}
    className="uui-input"
    disabled={true}
    onChange={[Function]}
    onKeyDown={[Function]}
    placeholder="HH:mm"
    type="text"
    value="01:05"
  />
  <div
    className="container uui-icon uui-disabled uui-icon-cancel -clickable hidden"
    style={Object {}}
  >
    <svg
      className=""
      height={24}
      viewBox="0 0 12 24"
      width={12}
    >
      <use
        xlinkHref="#btn-cross-18.svg"
      />
    </svg>
  </div>
</div>
`;
